add_common_compile_options ()
add_subdirectory (APICommon)
add_subdirectory (Assert)
add_subdirectory (AssertSDL3)
add_subdirectory (Celerity)
add_subdirectory (CelerityAssembly)
add_subdirectory (CelerityAsset)
add_subdirectory (CelerityInput)
add_subdirectory (CelerityLocale)
add_subdirectory (CelerityPhysics2d)
add_subdirectory (CelerityPhysics2dBox2d)
add_subdirectory (CelerityPhysics2dCommon)
add_subdirectory (CelerityPhysics2dDebugDraw)
add_subdirectory (CelerityPhysics3d)
add_subdirectory (CelerityPhysics3dCommon)
add_subdirectory (CelerityPhysics3dPhysX)
add_subdirectory (CelerityRender2d)
add_subdirectory (CelerityRenderFoundation)
add_subdirectory (CelerityResourceConfig)
add_subdirectory (CelerityResourceObject)
add_subdirectory (CelerityTransform)
add_subdirectory (CelerityUI)
add_subdirectory (CelerityUICommon)
add_subdirectory (CelerityUIImGUI)
add_subdirectory (CommandLine)
add_subdirectory (CPUProfiler)
add_subdirectory (CPUProfilerNone)
add_subdirectory (CPUProfilerTracy)
add_subdirectory (Container)
add_subdirectory (ExportGraph)
add_subdirectory (ExportGraphDOT)
add_subdirectory (Flow)
add_subdirectory (Galleon)
add_subdirectory (Handling)
add_subdirectory (Hashing)
add_subdirectory (HashingXXHash)
add_subdirectory (JobDispatcher)
add_subdirectory (JobDispatcherOriginal)
add_subdirectory (Log)
add_subdirectory (LogSPDLog)
add_subdirectory (Math)
add_subdirectory (Memory)
add_subdirectory (MemoryOriginal)
add_subdirectory (MemoryProfiler)
add_subdirectory (MemoryProfilerNone)
add_subdirectory (MemoryProfilerOriginal)
add_subdirectory (MemoryRecording)
add_subdirectory (Pegasus)
add_subdirectory (RecordCollection)
add_subdirectory (RecordCollectionPegasus)
add_subdirectory (RecordCollectionVisualization)
add_subdirectory (RenderBackend)
add_subdirectory (RenderBackendBGFX)
add_subdirectory (ResourceCooking)
add_subdirectory (ResourceObject)
add_subdirectory (ResourceProvider)
add_subdirectory (ResourceProviderHelpers)
add_subdirectory (ResourceProviderOriginal)
add_subdirectory (Serialization)
add_subdirectory (StandardLayoutMapping)
add_subdirectory (StandardLayoutMappingOriginal)
add_subdirectory (StandardLayoutMappingVisualization)
add_subdirectory (SyntaxSugar)
add_subdirectory (TaskCollection)
add_subdirectory (TaskExecutor)
add_subdirectory (TaskExecutorParallel)
add_subdirectory (TaskExecutorSequential)
add_subdirectory (Testing)
add_subdirectory (VirtualFileSystem)
add_subdirectory (VirtualFileSystemHelpers)
add_subdirectory (VirtualFileSystemOriginal)
add_subdirectory (VisualGraph)
add_subdirectory (Warehouse)
add_subdirectory (WarehouseGalleon)
add_subdirectory (WarehouseVisualization)
