add_common_compile_options ()
add_subdirectory (APICommon)
add_subdirectory (Assert)
add_subdirectory (AssertSDL3)
add_subdirectory (Celerity)
add_subdirectory (CelerityAssemblyLogic)
add_subdirectory (CelerityAssemblyModel)
add_subdirectory (CelerityAssetLogic)
add_subdirectory (CelerityAssetModel)
add_subdirectory (CelerityInputLogic)
add_subdirectory (CelerityInputModel)
add_subdirectory (CelerityLocaleLogic)
add_subdirectory (CelerityLocaleModel)
add_subdirectory (CelerityNexus)
add_subdirectory (CelerityPhysics2dDebugDrawLogic)
add_subdirectory (CelerityPhysics2dDebugDrawModel)
add_subdirectory (CelerityPhysics2dLogic)
add_subdirectory (CelerityPhysics2dLogicBox2d)
add_subdirectory (CelerityPhysics2dModel)
add_subdirectory (CelerityPhysics2dModelBox2d)
add_subdirectory (CelerityPhysics2dModelCommon)
add_subdirectory (CelerityPhysics3dLogic)
add_subdirectory (CelerityPhysics3dLogicPhysX)
add_subdirectory (CelerityPhysics3dModel)
add_subdirectory (CelerityPhysics3dModelCommon)
add_subdirectory (CelerityPhysics3dModelPhysX)
add_subdirectory (CelerityRender2dLogic)
add_subdirectory (CelerityRender2dModel)
add_subdirectory (CelerityRenderFoundationLogic)
add_subdirectory (CelerityRenderFoundationModel)
add_subdirectory (CelerityResourceConfigLogic)
add_subdirectory (CelerityResourceConfigModel)
add_subdirectory (CelerityResourceObjectLogic)
add_subdirectory (CelerityResourceObjectModel)
add_subdirectory (CelerityTransformLogic)
add_subdirectory (CelerityTransformModel)
add_subdirectory (CelerityUILogic)
add_subdirectory (CelerityUILogicImGUI)
add_subdirectory (CelerityUIModel)
add_subdirectory (CelerityUIModelCommon)
add_subdirectory (CelerityUIModelImGUI)
add_subdirectory (CommandLine)
add_subdirectory (CPUProfiler)
add_subdirectory (CPUProfilerNone)
add_subdirectory (CPUProfilerTracy)
add_subdirectory (Container)
add_subdirectory (ExportGraph)
add_subdirectory (ExportGraphDOT)
add_subdirectory (Flow)
add_subdirectory (Galleon)
add_subdirectory (Handling)
add_subdirectory (Hashing)
add_subdirectory (HashingXXHash)
add_subdirectory (InputStorage)
add_subdirectory (JobDispatcher)
add_subdirectory (JobDispatcherOriginal)
add_subdirectory (Log)
add_subdirectory (LogSPDLog)
add_subdirectory (Math)
add_subdirectory (Memory)
add_subdirectory (MemoryOriginal)
add_subdirectory (MemoryProfiler)
add_subdirectory (MemoryProfilerNone)
add_subdirectory (MemoryProfilerOriginal)
add_subdirectory (MemoryRecording)
add_subdirectory (Pegasus)
add_subdirectory (RecordCollection)
add_subdirectory (RecordCollectionPegasus)
add_subdirectory (RecordCollectionVisualization)
add_subdirectory (RenderBackend)
add_subdirectory (RenderBackendBGFX)
add_subdirectory (ResourceCooking)
add_subdirectory (ResourceObject)
add_subdirectory (ResourceProvider)
add_subdirectory (ResourceProviderHelpers)
add_subdirectory (ResourceProviderOriginal)
add_subdirectory (Serialization)
add_subdirectory (StandardLayoutMapping)
add_subdirectory (StandardLayoutMappingOriginal)
add_subdirectory (StandardLayoutMappingVisualization)
add_subdirectory (TaskCollection)
add_subdirectory (TaskExecutor)
add_subdirectory (TaskExecutorParallel)
add_subdirectory (TaskExecutorSequential)
add_subdirectory (Testing)
add_subdirectory (Threading)
add_subdirectory (Time)
add_subdirectory (Traits)
add_subdirectory (VirtualFileSystem)
add_subdirectory (VirtualFileSystemHelpers)
add_subdirectory (VirtualFileSystemOriginal)
add_subdirectory (VisualGraph)
add_subdirectory (Warehouse)
add_subdirectory (WarehouseGalleon)
add_subdirectory (WarehouseVisualization)
