function (finish_test_setup)
    get_property (TEST_TARGETS DIRECTORY "${CMAKE_CURRENT_SOURCE_DIR}" PROPERTY BUILDSYSTEM_TARGETS)
    foreach (TARGET IN LISTS TEST_TARGETS)
        get_target_property (TARGET_TYPE "${TARGET}" TYPE)
        if (TARGET_TYPE STREQUAL "EXECUTABLE")
            copy_required_shared_libraries (${TARGET})
            deploy_resource_mount_lists ("${TARGET}" "${CMAKE_CURRENT_BINARY_DIR}")
        endif ()
    endforeach ()
endfunction ()

add_subdirectory (Celerity)
add_subdirectory (ExportGraph)
add_subdirectory (Hashing)
add_subdirectory (Log)
add_subdirectory (Memory)
add_subdirectory (MemoryProfiler)
add_subdirectory (RecordCollection)
add_subdirectory (ResourceProvider)
add_subdirectory (StandardLayoutMapping)
add_subdirectory (TaskExecutor)
add_subdirectory (VirtualFileSystem)
add_subdirectory (Warehouse)
