add_subdirectory (Celerity)
add_subdirectory (CelerityAssembly)
add_subdirectory (CelerityAsset)
add_subdirectory (CelerityInput)
add_subdirectory (CelerityLocale)
add_subdirectory (CelerityPhysics2d)
add_subdirectory (CelerityPhysics3d)
add_subdirectory (CelerityRender2d)
add_subdirectory (CelerityResourceConfig)
add_subdirectory (CelerityTransform)
add_subdirectory (CelerityUI)
add_subdirectory (Container)
add_subdirectory (ExportGraph)
add_subdirectory (Flow)
add_subdirectory (Handling)
add_subdirectory (Hashing)
add_subdirectory (Log)
add_subdirectory (Memory)
add_subdirectory (MemoryProfiler)
add_subdirectory (MemoryRecording)
add_subdirectory (RecordCollection)
add_subdirectory (ResourceCooking)
add_subdirectory (ResourceObject)
add_subdirectory (ResourceProvider)
add_subdirectory (Serialization)
add_subdirectory (StandardLayoutMapping)
add_subdirectory (TaskExecutor)
add_subdirectory (VirtualFileSystem)
add_subdirectory (Warehouse)
