sober_library_begin ("${GAME_NAME}Game" OBJECT)
    file (GLOB_RECURSE HEADERS *.hpp)
    file (GLOB_RECURSE SOURCES *.cpp)
    list (APPEND SOURCES ${HEADERS})

    sober_library_set_sources ("${SOURCES}")
    sober_library_include_directory (PUBLIC "${CMAKE_CURRENT_SOURCE_DIR}")

    sober_naming_variant_target ("${GAME_NAME}Logic" Original LOGIC_TARGET)
    sober_naming_variant_target (MemoryRecording Original MEMORY_RECORDING_TARGET)
    sober_naming_variant_target (Serialization Original SERIALIZATION_TARGET)

    sober_library_link_library (PRIVATE ${GAME_NAME}Shaders)
    sober_library_link_library (PRIVATE ${LOGIC_TARGET})
    sober_library_link_library (PRIVATE ${MEMORY_RECORDING_TARGET})
    sober_library_link_library (PRIVATE ${SERIALIZATION_TARGET})
    sober_library_link_library (PRIVATE SDL3::SDL3)

    sober_library_use_service (PER_VARIANT PRIVATE Assert)
    sober_library_use_service (PER_VARIANT PRIVATE CelerityPhysics2d)
    sober_library_use_service (PER_VARIANT PRIVATE CelerityUI)
    sober_library_use_service (PER_VARIANT PRIVATE CPUProfiler)
    sober_library_use_service (PER_VARIANT PRIVATE ExportGraph)
    sober_library_use_service (PER_VARIANT PRIVATE JobDispatcher)
    sober_library_use_service (PER_VARIANT PRIVATE Log)
    sober_library_use_service (PER_VARIANT PRIVATE Memory)
    sober_library_use_service (PER_VARIANT PRIVATE MemoryProfiler)
    sober_library_use_service (PER_VARIANT PRIVATE RecordCollection)
    sober_library_use_service (PER_VARIANT PRIVATE RenderBackend)
    sober_library_use_service (PER_VARIANT PRIVATE ResourceProvider)
    sober_library_use_service (PER_VARIANT PRIVATE StandardLayoutMapping)
    sober_library_use_service (PER_VARIANT PRIVATE TaskExecutor)
    sober_library_use_service (PER_VARIANT PRIVATE VirtualFileSystem)
    sober_library_use_service (PER_VARIANT PRIVATE Warehouse)

    sober_variant_begin (Profiled)
        sober_variant_freeze_implementation (CPUProfiler Tracy)
        sober_variant_freeze_implementation (MemoryProfiler Original)
    sober_variant_end ()

    sober_variant_begin (Shipping)
        sober_variant_freeze_implementation (CPUProfiler None)
        sober_variant_freeze_implementation (MemoryProfiler None)
    sober_variant_end ()
sober_library_end ()

option (EMERGENCE_PLATFORMED_2D_GAME_SHIPPING "Whether Platformer2dDemo game should be built in shipping variant." OFF)
set (PLATFORMED_2D_GAME_VARIANT "Profiled")

if (EMERGENCE_PLATFORMED_2D_GAME_SHIPPING)
    set (PLATFORMED_2D_DEMO_VARIANT "Shipping")
endif ()

add_executable ("${GAME_NAME}GameLauncher" "${SOBER_TEST_RUNNER_STUB_SOURCE}")
sober_naming_variant_target ("${GAME_NAME}Game" "${PLATFORMED_2D_GAME_VARIANT}" GAME_TARGET)
sober_target_link_libraries ("${GAME_NAME}GameLauncher" PUBLIC "${GAME_TARGET}")

set_target_properties ("${GAME_NAME}GameLauncher" PROPERTIES
        RUNTIME_OUTPUT_DIRECTORY "${GAME_OUTPUT_DIRECTORY}/Game")
copy_required_shared_libraries ("${GAME_NAME}GameLauncher")
