sober_library_begin ("${GAME_NAME}Game" OBJECT)
    file (GLOB_RECURSE HEADERS *.hpp)
    file (GLOB_RECURSE SOURCES *.cpp)
    list (APPEND SOURCES ${HEADERS})

    sober_library_set_sources ("${SOURCES}")
    sober_library_include_directory (PUBLIC "${CMAKE_CURRENT_SOURCE_DIR}")

    sober_naming_variant_target ("${GAME_NAME}Shared" Original SHARED_TARGET)
    sober_naming_variant_target (CelerityResourceConfig Original CELERITY_RESOURCE_CONFIG_TARGET)
    sober_naming_variant_target (CelerityResourceObject Original CELERITY_RESOURCE_OBJECT_TARGET)
    sober_naming_variant_target (MemoryRecording Original MEMORY_RECORDING_TARGET)
    sober_naming_variant_target (Serialization Original SERIALIZATION_TARGET)

    sober_library_link_library (PRIVATE ${CELERITY_RESOURCE_CONFIG_TARGET})
    sober_library_link_library (PRIVATE ${CELERITY_RESOURCE_OBJECT_TARGET})
    sober_library_link_library (PRIVATE ${MEMORY_RECORDING_TARGET})
    sober_library_link_library (PRIVATE ${SERIALIZATION_TARGET})
    sober_library_link_library (PRIVATE ${SHARED_TARGET})
    sober_library_link_library (PRIVATE PhysX)

    sober_library_use_service (PER_VARIANT PRIVATE Assert)
    sober_library_use_service (PER_VARIANT PRIVATE CelerityPhysics3d)
    sober_library_use_service (PER_VARIANT PRIVATE CPUProfiler)
    sober_library_use_service (PER_VARIANT PRIVATE ExportGraph)
    sober_library_use_service (PER_VARIANT PRIVATE JobDispatcher)
    sober_library_use_service (PER_VARIANT PRIVATE Log)
    sober_library_use_service (PER_VARIANT PRIVATE Memory)
    sober_library_use_service (PER_VARIANT PRIVATE MemoryProfiler)
    sober_library_use_service (PER_VARIANT PRIVATE RecordCollection)
    sober_library_use_service (PER_VARIANT PRIVATE ResourceProvider)
    sober_library_use_service (PER_VARIANT PRIVATE StandardLayoutMapping)
    sober_library_use_service (PER_VARIANT PRIVATE TaskExecutor)
    sober_library_use_service (PER_VARIANT PRIVATE Warehouse)

    sober_variant_begin (Original)
    sober_variant_end ()
sober_library_end ()

add_executable ("${GAME_NAME}GameLauncher" ${GAME_EXECUTABLE_FLAG} "${SOBER_TEST_RUNNER_STUB_SOURCE}")
sober_naming_variant_target ("${GAME_NAME}Game" Original GAME_TARGET)
sober_target_link_libraries ("${GAME_NAME}GameLauncher" PUBLIC "${GAME_TARGET}")

set_target_properties ("${GAME_NAME}GameLauncher" PROPERTIES
        RUNTIME_OUTPUT_DIRECTORY "${GAME_OUTPUT_DIRECTORY}/Game")
copy_required_shared_libraries ("${GAME_NAME}GameLauncher")
